# viscom_framework

./: .dir-locals.el  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  doxy.gen  prep_linux_build.sh
beamertoy/: CMakeLists.txt  main.cpp
beamertoy/app/: ApplicationNodeImplementation.cpp  ApplicationNodeImplementation.h  CoordinatorNode.cpp  CoordinatorNode.h  IntrospectableFsq.cpp  IntrospectableFsq.h  ToyPlayer.cpp  ToyPlayer.h
beamertoy/app/builders/: ExternalUniformBuilder.cpp  ExternalUniformBuilder.h  ShaderToySamplerBuilder.cpp  ShaderToySamplerBuilder.h  ShaderToyUniformBuilder.cpp  ShaderToyUniformBuilder.h
beamertoy/app/handlers/: ExternalUniformBuilder.cpp  ExternalUniformBuilder.h  ProgramOutputHandler.cpp  ProgramOutputHandler.h  ShaderToySamplerBuilder.cpp  ShaderToySamplerBuilder.h
beamertoy/app/player/: BufferPass.cpp  BufferPass.h  ImagePass.cpp  ImagePass.h
beamertoy/gui/: CMakeLists.txt  Gui.cpp  Gui.h  MasterNodeGui.cpp  gui.cpp  gui.h
beamertoy/gui/dialogs/: Animation.cpp  FileSelect.cpp  FileSelect.h  OglLog.h  Overlay.h  ShaderLog.h  Tracker.cpp  Window.h
beamertoy/include/: Shadertoy.h
beamertoy/inspect/: CMakeLists.txt  ProgramInspector.cpp  ProgramInspector.h  resource_handler.h
beamertoy/inspect/builders/: TrackedUniformBuilder.h
beamertoy/inspect/glwrap/: interface.cpp  interface.h  resource.cpp  resource.h  strings.cpp  strings.h
beamertoy/inspect/handlers/: ProgramOutputHandler.cpp  UniformBlockHandler.h
beamertoy/inspect/models/: abc.h  interface.cpp  interface.h  program_output.cpp  program_output.h  resource.cpp  resource.h  resource_template.cpp  resource_template.h  uniform.cpp  uniform.h
beamertoy/inspect/scratch/: ExternalUniformBuilder.cpp  ExternalUniformBuilder.h  ShaderToySamplerBuilder.cpp  ShaderToySamplerBuilder.h  TrackedUniformBuilder.cpp
beamertoy/inspect/uniform/: BooleanUniform.cpp  DefaultBuilder.cpp  DefaultBuilder.h  DoubleUniform.cpp  FloatUniform.cpp  IntegerUniform.cpp  IntegerUniform.h  SamplerUniform.cpp  UniformBuilder.cpp  UniformBuilder.h  UniformHandler.cpp  UniformHandler.h  UniformTypes.cpp  UniformTypes.h  UnsignedUniform.cpp  UnsignedUniform.h  boolean.cpp  boolean.h  double.cpp  double.h  empty_uniform.cpp  empty_uniform.h  float.cpp  float.h  generic_uniform.cpp  generic_uniform.h  handler.cpp  handler.h  integer.cpp  sampler.cpp  sampler.h  uniform_resource.cpp  uniform_resource.h  uniform_with_value.h  unsigned.cpp
beamertoy/shadertoy/: CMakeLists.txt  Shadertoy.h
cmake/: BuildConfig.cmake  assimp_config.cmake  bass.cmake  minuseins.cmake
docs/: Makefile  conf.py  index.rst
docs/01_introspection/: 01_introspect.rst  02_ProgramInspector.rst  03_SpecializedInterfaces.rst  04_SpecializingResources.rst  05_shadertoy.rst
docs/chapters/: 03_SpecializedInterfaces.rst
docs/src/glslViewer/: shader.cpp
playground/: ProgramInterface.cpp  ProgramInterface.h  program.h  uniform.h  util.h
playground/interfaces/: AtomicCounterBuffer.cpp  AtomicCounterBuffer.h  ProgramOutput.cpp  ShaderStorageBlock.cpp  StageSubroutine.cpp  StageSubroutineUniform.cpp  TransformFeedbackBuffer.cpp  TransformFeedbackBuffer.h  TransformFeedbackVarying.h  UniformBlock.cpp  interface_defs.h
playground/interfaces/abstract/: BlockOrBufferInterfaceBase.cpp
playground/visitors/: UniformInterface.cpp
report/: 03_reflect.rst  Makefile  conf.py  doxy.gen  index.rst
report/chapters/: 00_intro.rst  01_api.rst  01_toy.rst  02_art.rst  02_tech.rst  03_reflect.rst  04_stahp.rst
resources/: MasterNodeGui.json  NamedTracks.json  StartupPrograms.json  StoredShader.json  Tracks.json  VectorTracks.json
resources/ShaderToy/: 4d3SR4.json  4dGGWt.json  4dVGzw.json  4dcSRN.json  4dfXW4.json  4dy3zV.json  4lByzD.json  4lSyRm.json  4lf3z2.json  4lfBWH.json  4llBDH.json  4llfR4.json  4lscD7.json  4sKXRV.json  4sV3zm.json  4sVGD3.json  4sy3Wd.json  4syGWK.json  4syGzy.json  4tB3zR.json  4tByzm.json  4tSyzD.json  4tXGDf.json  4tXcDl.json  4tjcRV.json  4tsGRl.json  Md3yWN.json  MdK3RW.json  MdKGWG.json  MdcGzj.json  MdcXz8.json  MddyWH.json  MdfSW7.json  MdjcD3.json  MdlXWH.json  MdyGWh.json  MlSGzR.json  MlXcWS.json  MlfGDX.json  MlffW8.json  (+63 more)
resources/bak/: VectorTracks.json
resources/json/shadertoy/: 4d23WG.json  4d2BDy.json  4d2BRm.json  4d2BW1.json  4d2XD3.json  4d2XWV.json  4d2Xzc.json  4d2Xzw.json  4d2cDy.json  4d2cWD.json  4d2cWc.json  4d2fD1.json  4d2fDc.json  4d2fWV.json  4d2fzD.json  4d2yD1.json  4d2yRm.json  4d2yRt.json  4d2yWm.json  4d2yzW.json  4d33DM.json  4d33DN.json  4d33z4.json  4d33zM.json  4d3BWH.json  4d3GRr.json  4d3GW7.json  4d3GWS.json  4d3GzS.json  4d3Gzn.json  4d3SDX.json  4d3SR4.json  4d3SRN.json  4d3SRl.json  4d3SRr.json  4d3SWM.json  4d3SWl.json  4d3SWs.json  4d3Szj.json  4d3XDl.json  (+7759 more)
resources/shader/: defaults.glsl  defaults.vert  genTexture.frag  glslc  glslc.cpp  hg_sdf.glsl  iq_ref.glsl  lib_postproc.glsl  lib_sdf.glsl  lib_sdf_op.glsl  lib_trace.glsl  lib_util.glsl  renderTexture.frag  test.frag  tmptoy.frag
resources/shader/buffer/: footer.glsl  header.glsl
resources/shader/image/: footer.glsl  header.glsl
resources/shader/lib/: coloring.glsl  postproc.glsl  sdf.glsl  sdf_op.glsl  sound.glsl  trace.glsl  util.glsl
resources/shader/maps/: 2dsdftoy.glsl  blockyGround.glsl  cubes.glsl  distanceMeter.glsl  hexagons.glsl  mysteryPyramid.glsl  positionOffsetting.glsl  rotatingSphere.glsl  sdfDemo.glsl  sdfText.glsl  sphereZone.glsl  text.glsl  windingTunnel.glsl
resources/shader/research/: defaults.frag  iq_ref.glsl
scripts/: 4syGWK.json  Commands.py  cmpPageNavigation.js  codemirror.js  extract.js  glsl.js  localms.xml  screencfg.py  shadertoy.py  test.xml
scripts/header_footer_dumper/: pgWatch.js  piLibs.js
src/: main.cpp
src/app/: ApplicationNodeImplementation.cpp  ApplicationNodeImplementation.h  MasterNode.cpp  MasterNode.h  SlaveNode.cpp  SlaveNode.h  StoredShader.h  Vertices.h  util.h
src/camera/: MyFreeCamera.cpp  MyFreeCamera.h
src/gfx/: MyFullscreenQuad.cpp  MyFullscreenQuad.h  Primitives.cpp  glutil.h
src/scene/: Scene.cpp  Scene.h
(+196 files in other folders)
